<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, MyTwitterActivity!</string>
    <string name="app_name">MyTwitter</string>
    <string name="nodata">No data</string>
    <string name="update_user">Update User</string>
    <string name="update_status">Update Status</string>
    <string name="update_status_with_count">Update Status (%1$d/%2$d)</string>
    <string name="updating">Updating...</string>
    <string name="update_successful">Update Successful</string>
    <string name="update_unsuccessful">Update Unsuccessful</string>
    <string name="more">More</string>
    <string name="retrieving">Retrieving...</string>
    <string name="new_timeline">Update New</string>
    <string name="refresh_timeline">Refresh</string>
    <string name="status_count">%1$d/%2$d</string>
    <string name="options">Options</string>
    <string name="retweet">ReTweet</string>
    <string name="retweet_with_comment">ReTweet with comment</string>
    <string name="retweet_successful">ReTweet Successful</string>
    <string name="delete_successful">Delete Successful</string>
    <string name="reply">Reply</string>
    <string name="settings">Settings</string>
    <string name="account">Account:</string>
    <string name="account_id">AccountID:</string>
    <string name="api_server">API Server:</string>
    <string name="font_size">Font Size:</string>
    <string name="auto_interval">Auto Interval:</string>
    <string name="timeline_count">Timeline Count:</string>
    <string name="search_label">Search</string>
    <string name="search_hint">example</string>
    <string name="delete">Delete</string>
    <string name="direct_message">Direct Message</string>
    <string name="notify_new_tweet">Received %1$d new Tweet</string>
    <string name="notify_new_mention">Received %1$d new Mention</string>
    <string name="notify_new_direct_message">Received %1$d new DM</string>
    <string name="background_process">Background Process:</string>
    <string name="notification">Notification:</string>
	<string name="urls">URLs</string>
    <string name="jump_to">Jump to %s</string>
	<string name="favorites">Favorites</string>
	<string name="favorites_successful">Favorites Successful</string>

<string name="mentioned_for">Mentioned for</string>
</resources>
