<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/api_server" />
	<EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/api_server_url" android:singleLine="true" android:hint="http://example.com/" android:maxLength="256" android:inputType="textUri"/>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account" />
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/account_name" android:layout_weight="1" />
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account_id" />
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/account_id" android:layout_weight="1" />
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
		<Button android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/update_user"
			android:text="@string/update_user"></Button>		
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/font_size" />
		<Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/font_size" android:entries="@array/font_size_labels"/>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timeline_count" />
		<Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/timeline_count" android:entries="@array/timeline_count_labels"/>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/auto_interval" />
		<Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/auto_interval" android:entries="@array/auto_interval_labels"/>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/background_process" />
		<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/background_process"/>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notification" />
		<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/notification"/>
	</LinearLayout>
</LinearLayout>
